Documentation improvements